--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "twig/twig": "^3.7",
     "phpmailer/phpmailer": "^6.9",
     "htmlburger/carbon-fields": "^3.6",
-    "astrahoshi/boreal-core": "dev-main"
+    "astrahoshi/boreal-core": "^1.0"
   },
   "autoload": {
     "psr-4": {
