--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "alkemy/serel",
+  "name": "kirinaki/borealis",
   "type": "project",
   "require": {
     "twig/twig": "^3.7",
     "phpmailer/phpmailer": "^6.9",
     "htmlburger/carbon-fields": "^3.6",
-    "astrahoshi/boreal-core": "^1.0"
+    "kirinaki/core": "^1.0"
   },
   "autoload": {
     "psr-4": {
