--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,16 @@
   "name": "kirinaki/borealis",
   "type": "project",
   "require": {
+    "php": "^8.2",
     "twig/twig": "^3.7",
     "phpmailer/phpmailer": "^6.9",
     "htmlburger/carbon-fields": "^3.6",
-    "kirinaki/core": "^1.0"
+    "php-di/php-di": "^7.0"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app"
+      "App\\": "app",
+      "Core\\": "core"
     }
   },
   "license": "MIT",
