--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
   "license": "MIT",
   "authors": [
   ],
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "require-dev": {
+    "symfony/var-dumper": "^7.1"
+  }
 }
