--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,11 @@
   "type": "project",
   "require": {
     "php": "^8.2",
-    "kirinaki/framework": "v1.0.0-beta.1"
+    "kirinaki/framework": "^v1.0.0"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app",
-      "Core\\": "core"
+      "App\\": "app"
     }
   },
   "license": "MIT",
